--- a/README
+++ b/README
@@ -1,3 +1,55 @@
 HTML parser (KS)
 
 Vytvořte program, který dostane na vstup HTML soubor a na výstup dá hlášku, zda je soubor dobře utvořen. Nemusíte řešit všechny tagy, stačí <HTML>, <HEAD>, <TITLE>, <BODY>, <B>, <I>, <U>, <BR> a tagy pro tabulky a nadpisy. U každého tagu uvažujte pouze několik nejběžnejších parametrů, ale minimálně 3. Výstup zpracujte co nejpřehledněji.
+
+
+   * <HTML>
+     - zadne atributy
+     * <HEAD>
+       - zadne atributy
+       * <TITLE>
+     * <BODY>
+       - class
+       - id
+       - style
+       * <B>
+         - class
+         - id
+         - style
+       * <I>
+         - class
+         - id
+         - style
+       * <U>
+         - class
+         - id
+         - style
+       * <BR>
+         - class
+         - id
+         - style
+       * tabulky
+         * <TABLE>
+           - border
+           - cellpadding
+           - cellspacing
+           - summary
+           * <TR>
+             - align
+             - char
+             - valign
+             * <TH>
+               - abbr
+               - align
+               - rowspan
+             * <TD>
+               - abbr
+               - align
+               - valign
+       * nadpisy
+         * <H1> - <H6>
+           - class
+           - id
+           - lang
+
+http://www.w3schools.com/tags/ref_standardattributes.asp
